--- a/src/components/VideoFooter.css
+++ b/src/components/VideoFooter.css
@@ -1,3 +1,15 @@
+ 
+.video-footer{
+    position: relative;
+    margin-left: 20px;
+    bottom: 100px;
+}
+.videoFooter-ticker > .ticker{
+    width: 60%;
+    margin-left:30px;
+    margin-bottom: 20px;
+    
+}
 .videoFooter-text{
     position: absolute;
     color:white;
@@ -13,4 +25,20 @@
     color: white;
     font-weight: 900;
     text-transform: inherit;
+}
+.video-footer-icon{
+    color: white;
+    position:absolute;
+    left: 5px;
+}
+.videoFooter-ticker > .ticker{
+    width:60%;
+    height:fit-content;
+    margin-left: 30px;
+    margin-right: 20px;
+}
+.videoFooter-ticker h1{
+    font-size: 12px;
+    color: white;
+    padding-top: 7px;
 }
