--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,9 @@ h1{
   -ms-overflow-style:none;
   scrollbar-width:none
 }
+
+@media screen and (min-width:720px){
+  .app-videos{
+    width:50%;
+  }
+}
