--- a/src/components/VideoFooter.css
+++ b/src/components/VideoFooter.css
@@ -1,4 +1,6 @@
- 
+ .material-icons{
+     font-size:larger;
+ }
 .video-footer{
     position: relative;
     margin-left: 20px;
@@ -18,10 +20,10 @@
     margin-bottom:20px;
 }
 .videoFooter-text > h3{
-    margin-left: 12px;
-    padding-bottom: 10px;
+    margin-left: 10px;
+    padding-bottom: 20px;
 }
-.videoFooter-text > h3 > button{
+.videoFooter-text > h3 > button {
     color: white;
     font-weight: 900;
     text-transform: inherit;
